sidebar and nav changed

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -3,7 +3,7 @@
 :root {
     --blue: #1e90ff;
     --white: #ffffff;
-    --bgPrimary: #000914 ;
+    --bgPrimary: #1c1d1e ;
     --ashcolor : #424949 ;
   }
 
