--- a/src/style/features.scss
+++ b/src/style/features.scss
@@ -569,3 +569,38 @@ and (max-device-width : 640px)
     margin-left: -11rem;
   }
 }
+
+
+
+
+//css done by ashique
+
+/* ==================================================================== start why connect ==================================================================== */
+
+.why-connect-main-div{
+  background-color: #000914;
+  padding: 5%;
+}
+.why-connect-main-div h1{
+  color: white;
+  font-size: 5vw;
+  margin: 0;
+  padding: 0;
+  padding-top: 5%;
+  margin-bottom: 5%;
+}
+.why-connect-main-div h2{
+  color: white;
+  font-size: 3vw;
+  text-align: end;
+}
+.why-connect-main-div p{
+  color: white;
+  font-size: 1.5vw;
+}
+
+.why-connect-main-div li{
+  color: white;
+  font-size: 1.5vw;
+}
+
