--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -1,6 +1,15 @@
 @import './main.scss';
 
 
+.button-text
+{
+    border-radius: 20px;
+    border: 3px solid #F1C40F;
+    background-color: transparent;
+    color: $primary_color;
+    // padding:5px 10px;
+    font-weight: 500;
+}
 .navbar
 {
     display: flex;
@@ -20,12 +29,13 @@
 {
     color: $primary_color;
     font-size: 1.5rem;
+    border: none;
 }
 .menu-btn:hover
 {
     color: $primary_color;
     font-size: 1.5rem;
-    border-color: $primary_color;
+    // border-color: $primary_color;
 }
 
 .profile_div
@@ -109,3 +119,34 @@
 
   }
 
+
+
+
+  ///css done by ashique
+
+  .main-banner{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #000914;
+}
+
+.right-div{
+    display: flex;
+    align-items: center;
+    width: 60%;
+    text-align: end;
+}
+
+.left-div img{
+    height: 80%;
+    margin-top: 20%;
+}
+
+.right-div h1{
+    margin: 0;
+    padding: 0;
+    color: white;
+    font-size: 6vw;
+}
