--- a/src/style/package.scss
+++ b/src/style/package.scss
@@ -176,3 +176,177 @@ and (max-device-width : 640px)
     }
 
 }
+
+
+//css done ashique
+
+.main-pakages-div{
+    
+    background-image: url("../assets/images/anim.svg");
+    background-size: contain;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    padding-bottom: 5%;
+    display: flex;
+    justify-content: space-evenly;
+    filter: contrast(110%)
+    
+}
+
+.pakage-div-one{
+    width: 10%;
+    height: 80%;
+    display: flex;
+    align-items: flex-start;
+    position: relative;
+    background-color: aqua;
+}
+
+.pakage-div-one h1{
+    position: absolute;
+    color: white;
+    transform: rotate(90deg);
+    font-size: 5vw;
+    padding: 0;
+    margin: 0;
+    top: 15vw;
+
+}
+
+.pakage-div-two{
+    width: 25%;
+    height: 100vh;
+    overflow: hidden;
+    /* padding: 2%; */
+    box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 225, 0.1);
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+}
+
+.pakage-div-two .img-div{
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    margin-left: -1px;
+}
+
+.pakage-div-two .img-div h4{
+   position: absolute;
+   color: white;
+   font-size: 2vw;
+   margin-top: 10%;
+}
+.pakage-div-two img{
+    width: 100%;
+    margin-top: -10%;
+    margin-left: -1px;
+}
+.pakage-div-two .content-div{
+    padding-left: 5%;
+}
+
+.pakage-div-two li{
+    padding-left: 2vw;
+    color: white;
+    font-size: 1.2vw;
+    padding-top: 1.2vw;
+    position: relative;
+}
+
+.pakage-div-two li i{
+    padding-top: 0vw;
+    left: 0;
+    position: absolute;
+    font-size: 1.5vw;
+    color:rgb(139, 139, 139);
+}
+
+.pakage-div-two button{
+    margin-top: 3vw;
+    width: 70%;
+    height: 8%;
+    margin-left: 15%;
+    background-color: transparent;
+    border: solid;
+    border-color: white;
+    color: white;
+    border-radius: 20px;
+    border-width: 1px;
+    font-size: 1.5vw;
+}
+
+.pakage-div-three{
+    width: 25%;
+    height: 100vh;
+    margin-top: 10%;
+    overflow: hidden;
+    box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 225, 0.1);
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+}
+
+
+.pakage-div-three .img-div{
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    margin-left: -1px;
+}
+
+.pakage-div-three .img-div h4{
+   position: absolute;
+   color: white;
+   font-size: 2vw;
+   margin-top: 10%;
+}
+.pakage-div-three img{
+    width: 100%;
+    margin-top: -10%;
+    margin-left: -1px;
+}
+.pakage-div-three .content-div{
+    padding-left: 5%;
+}
+
+.pakage-div-three li{
+    padding-left: 2vw;
+    color: white;
+    font-size: 1.2vw;
+    padding-top: 1.2vw;
+    position: relative;
+}
+
+.pakage-div-three li i{
+    padding-top: 0vw;
+    left: 0;
+    position: absolute;
+    font-size: 1.5vw;
+    color:rgb(139, 139, 139);
+}
+
+.pakage-div-three button{
+    margin-top: 3vw;
+    width: 70%;
+    height: 8%;
+    margin-left: 15%;
+    background-color: transparent;
+    border: solid;
+    border-color: white;
+    color: white;
+    border-radius: 20px;
+    border-width: 1px;
+    font-size: 1.5vw;
+}
+
+
+.pakage-div-for{
+    width: 10%;
+}
