--- a/src/style/package.scss
+++ b/src/style/package.scss
@@ -1,6 +1,30 @@
 @import './main.scss';
 @import './campaign.scss';
 
+.checkbox
+{
+    height: 25px;
+    width: 25px;
+    
+}
+
+.select-months
+{
+    min-width: 20%;
+    height: 40px;
+    border: 2px solid $ashcolor;
+}
+
+
+
+.checkbox-label
+{
+   display: flex;
+   align-items: flex-start;
+   justify-content: flex-start;
+   
+}
+
 .card-box
 {
     background-color:  $ashcolor ;
@@ -195,11 +219,11 @@ and (max-device-width : 640px)
 
 .pakage-div-one{
     width: 10%;
-    height: 80%;
+ 
     display: flex;
     align-items: flex-start;
     position: relative;
-    background-color: aqua;
+    
 }
 
 .pakage-div-one h1{
@@ -213,9 +237,21 @@ and (max-device-width : 640px)
 
 }
 
+// .pakage-div-three{
+//     width: 25%;
+//     margin-top: 10%;
+//     overflow: hidden;
+//     box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
+//     border-radius: 15px;
+//     background: rgba(255, 255, 225, 0.1);
+//     border-top: 1px solid rgba(255, 255, 255, 0.5);
+//     border-left: 1px solid rgba(255, 255, 255, 0.5);
+//     backdrop-filter: blur(5px);
+// }
+
 .pakage-div-two{
     width: 25%;
-    height: 100vh;
+    margin-bottom: 10%;
     overflow: hidden;
     /* padding: 2%; */
     box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
@@ -251,6 +287,7 @@ and (max-device-width : 640px)
 
 .pakage-div-two li{
     padding-left: 2vw;
+    padding-right: 2vw;
     color: white;
     font-size: 1.2vw;
     padding-top: 1.2vw;
@@ -277,11 +314,11 @@ and (max-device-width : 640px)
     border-radius: 20px;
     border-width: 1px;
     font-size: 1.5vw;
+    margin-bottom: 5vw;
 }
 
 .pakage-div-three{
     width: 25%;
-    height: 100vh;
     margin-top: 10%;
     overflow: hidden;
     box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
@@ -316,8 +353,15 @@ and (max-device-width : 640px)
     padding-left: 5%;
 }
 
+.main-pakages-div ul{
+    list-style: none;
+    padding:0;
+    margin:0;
+}
+
 .pakage-div-three li{
     padding-left: 2vw;
+    padding-right: 2vw;
     color: white;
     font-size: 1.2vw;
     padding-top: 1.2vw;
@@ -344,9 +388,15 @@ and (max-device-width : 640px)
     border-radius: 20px;
     border-width: 1px;
     font-size: 1.5vw;
+    margin-bottom: 5vw;
 }
 
 
 .pakage-div-for{
     width: 10%;
 }
+// ol, ul {
+// 	list-style: none;
+//     padding:0;
+//     margin:0;
+// }
