--- a/src/style/campaign.scss
+++ b/src/style/campaign.scss
@@ -111,3 +111,289 @@ and (max-device-width : 640px)
         padding-top: 30rem;
     }
 }
+
+
+
+
+//css doone by ashique
+
+.main-div{
+    background-color: black;
+    justify-content: center;
+    display: flex;
+}
+
+// / =============================common rottate card cub============================================= /
+
+#campain-heading-tag{
+    color: white;
+    font-size: 5vw;
+    font-weight: 100;
+    margin-left: 10%;
+}
+
+.cube{
+    position: relative;
+    margin: 5vw;
+    width: 20vw;
+    height: 40vw;
+    transform-style: preserve-3d;
+    transform: rotateX(-30deg);
+    animation: cube_animate 10s linear infinite;
+    text-align: center;
+}
+
+.cube:hover{
+    animation: none;
+    cursor: pointer;
+}
+
+
+.cube div{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: unset;
+    // background: url(./images/ashi.jpg);
+    // / background-position: left 15vw; /
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.top::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20vw;
+    height: 40vw;
+    transform: translateZ(-400px);
+    box-shadow: 0 0 120px rgba(255, 255, 255, 0.068),
+    0 0 40px rgba(0, 38, 255, 0.993),
+    0 0 50px rgba(6, 176, 255, 0.6);
+}
+
+@keyframes cube_animate{
+    0%{
+        transform: rotateX(-30deg) rotateY(0deg) ;
+    }
+    25%{
+        transform: rotateX(-30deg) rotateY(20deg) ;
+    }
+    75%{
+        transform: rotateX(-30deg) rotateY(-20deg) ;
+    }
+    100%{
+        transform: rotateX(-30deg) rotateY(0deg) ;
+    }
+}
+
+// / =========================================contetnt card sections===================================================== /
+
+// / ****************** cube content div *************************** /
+
+.cub-content-div{
+    width: 100%;
+    height: 100%;
+    padding: 5%;
+}
+#cube-img{
+    width: 13vw;
+    height: 15vw;
+    padding-top: 2vw;
+    padding-left: 2vw;
+}
+
+.cub-content-div p{
+    margin-top: 4vw;
+    margin-bottom: 4vw;
+    padding: 2vw;
+    text-align: left;
+    font-size: 1vw;
+    color: white;
+    // / font-family: Verdana, Geneva, Tahoma, sans-serif; /
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.cub-content-div button{
+    font-size: 1vw;
+    background: transparent;
+    color: white;
+    border-radius: 25px;
+    border: solid;
+    border-color: rgb(201, 188, 6);
+    width: 10vw;
+    height: 3vw;
+}
+
+.cub-content-div h1{
+    color: white;
+    font-size: 2.5vw;
+    margin-left: -16vw;
+    margin-top: -4vw;
+    text-align: left;
+    transform: rotate(90deg);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+
+// / ****************** cube content div second *************************** /
+
+#cube-img_second{
+    width: 12vw;
+    padding-top: 2vw;
+    padding-left: 2vw;
+}
+
+.cub-content-div-second{
+    width: 100%;
+    height: 100%;
+    padding: 5%;
+}
+
+.cub-content-div-second p{
+    margin-top: 1vw;
+    margin-bottom: 2vw;
+    padding: 2vw;
+    text-align: left;
+    font-size: 1vw;
+    color: white;
+    // / font-family: Verdana, Geneva, Tahoma, sans-serif; /
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.cub-content-div-second button{
+    font-size: 1vw;
+    background: transparent;
+    color: white;
+    border-radius: 25px;
+    border: solid;
+    border-color: rgb(201, 188, 6);
+    width: 10vw;
+    height: 3vw;
+}
+
+.cub-content-div-second h1{
+    color: white;
+    font-size: 2.5vw;
+    margin-left: -17vw;
+    margin-top: -4vw;
+    text-align: left;
+    transform: rotate(90deg);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+// / ****************** cube content div third *************************** /
+
+#cube-img-third{
+    width: 10vw;
+    padding-top: 2vw;
+    padding-left: 2vw;
+}
+
+
+#cube-img_second{
+    width: 12vw;
+    padding-top: 2vw;
+    padding-left: 2vw;
+}
+
+.cub-content-div-third{
+    width: 100%;
+    height: 100%;
+    padding: 5%;
+}
+
+.cub-content-div-third p{
+    margin-top: 1vw;
+    margin-bottom: 2vw;
+    padding: 2vw;
+    text-align: left;
+    font-size: 1vw;
+    color: white;
+    // / font-family: Verdana, Geneva, Tahoma, sans-serif; /
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.cub-content-div-third button{
+    font-size: 1vw;
+    background: transparent;
+    color: white;
+    border-radius: 25px;
+    border: solid;
+    border-color: rgb(201, 188, 6);
+    width: 10vw;
+    height: 3vw;
+}
+
+.cub-content-div-third h1{
+    color: white;
+    font-size: 2.5vw;
+    margin-left: -17vw;
+    margin-top: -12vw;
+    text-align: left;
+    transform: rotate(90deg);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+
+
+// / ****************** sub section two cube content div third *************************** /
+
+
+#sb-two-cube-img_second{
+    height: 15vw;
+    width: 14vw;
+    padding-top: 2vw;
+    padding-left: 2vw;
+}
+
+.sb-two-cub-content-div-second{
+    width: 100%;
+    height: 100%;
+    padding: 5%;
+}
+
+.sb-two-cub-content-div-second p{
+    margin-top: 3vw;
+    margin-bottom: 3vw;
+    padding: 2vw;
+    text-align: left;
+    font-size: 1vw;
+    color: white;
+    // / font-family: Verdana, Geneva, Tahoma, sans-serif; /
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.sb-two-cub-content-div-second button{
+    font-size: 1vw;
+    background: transparent;
+    color: white;
+    border-radius: 25px;
+    border: solid;
+    border-color: rgb(201, 188, 6);
+    width: 10vw;
+    height: 3vw;
+}
+
+.sb-two-cub-content-div-second h1{
+    color: white;
+    font-size: 2.5vw;
+    margin-left: -17vw;
+    margin-top: -2vw;
+    text-align: left;
+    transform: rotate(90deg);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+
+
+// / =======================sub section cube third========================== /
+
+
+#sb-two-cube-img_third{
+    width: 17vw;
+    padding-top: 2vw;
+    padding-left: 2vw;
+}
