--- a/src/style/service.scss
+++ b/src/style/service.scss
@@ -171,7 +171,6 @@ ul.dashed {
 
 .service-main-div{
   width: 100%;
-  height: 100vh;
   display: flex;
   justify-content: space-evenly;
   padding: 5%;
@@ -249,12 +248,12 @@ ul.dashed {
 
 
 .sr-content-div{
-  padding-left: 5%;
+  padding: 10%;
   margin-top: 8vw;
 }
 
 .sr-content-div li{
-  padding-left: 2vw;
+  padding-left: 0;
   color: white;
   font-size: 1.2vw;
   padding-top: 10px;
