--- a/src/style/features.scss
+++ b/src/style/features.scss
@@ -576,7 +576,6 @@ and (max-device-width : 640px)
 //css done by ashique
 
 /* ==================================================================== start why connect ==================================================================== */
-
 .why-connect-main-div{
   background-color: #000914;
   padding: 5%;
@@ -584,23 +583,55 @@ and (max-device-width : 640px)
 .why-connect-main-div h1{
   color: white;
   font-size: 5vw;
+  font-weight: 100;
   margin: 0;
   padding: 0;
   padding-top: 5%;
   margin-bottom: 5%;
 }
 .why-connect-main-div h2{
-  color: white;
+  color: #0e3742;
+  outline: none;
+  cursor: pointer;
   font-size: 3vw;
   text-align: end;
+  font-weight: 100;
 }
+
+.why-connect-main-div h2:hover{
+  animation: animate-play1 2s forwards;
+}
+
+@media (max-width:700px){
+  .why-connect-main-div h2{
+      font-size: 15px;
+  }
+}
+
 .why-connect-main-div p{
   color: white;
   font-size: 1.5vw;
 }
 
+@media (max-width:700px){
+  .why-connect-main-div p{
+      font-size: 11px;
+  }
+}
+
 .why-connect-main-div li{
   color: white;
   font-size: 1.5vw;
+}
+
+@media (max-width:700px){
+  .why-connect-main-div li{
+      font-size: 11px;
+  }
+}
+
+
+.space-div{
+  height: 25vh;
 }
 
