--- a/src/style/package.scss
+++ b/src/style/package.scss
@@ -1,229 +1,46 @@
 @import './main.scss';
 @import './campaign.scss';
 
-.checkbox
-{
-    height: 25px;
-    width: 25px;
-    
+
+/* ==================================================================== pakages start ==================================================================== */
+.bullets{
+    list-style-type: none;
 }
-
-.select-months
-{
-    min-width: 20%;
-    height: 40px;
-    border: 2px solid $ashcolor;
-}
-
-
-
-.checkbox-label
-{
-   display: flex;
-   align-items: flex-start;
-   justify-content: flex-start;
-   
-}
-
-.card-box
-{
-    background-color:  $ashcolor ;
-    height: 650px;
-    width: 65%;
-    border-radius: 8px;
-    position: relative;
-    margin-left: 6.5rem;
-    border-color: none;
-
-}
-
-.card-details
-{
-    background-color:  inherit;
-    // width: 75%;
-    border-color: none;
-    border-style: none;
-}
-
-.payment_card
-{
-   
-    background-color: $ashcolor;
-    height: 450px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.header
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    
-}
-
-.header_details
-{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    // margin-left: 3rem;
-}
-
-.bg-img
-{
-    position: absolute;
-    width: 100%;
-    height: 260px;
-    margin-top: 2;
-    margin-top: 4rem;
-}
-
-.rating
-{
-    font-size: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    margin-top: 0rem;
-    z-index: 1;
-}
-
-
-.inner-box
-{
-    display: flex;
-    align-items: flex-start; 
-    // justify-content: flex-start;
-    background-color: inherit;
-    border: none;
-    width: 90%;
-    height: 350px;
-    margin-top: 6rem;
-}
-
-.checkIcon
-{
-    background-color: inherit;
-}
-
-
-.pkg-content
-{
-    margin-left: 2rem;
-    margin-top: -1rem;
-}
-
-.pkg-text
-{
-    writing-mode: vertical-lr;
-    text-orientation: upright;
-    transform: matrix(1, 0, 0, 1, 0, 0);
-    top: 525%;
-    position: relative;
-    padding-top: 70%;
-    margin-top: 32rem !important;
-}
-
-
-.space-align
-{
-    padding-top:5%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-@media only screen and (min-width: 768px) {
-
-    .card-box
-    {
-        margin-left: 4rem;
-        margin-top: 50%;
-    }
-
-    .pkg-text
-    {
-        top: 420%;
-        padding-top: 0;
-    }
-
-    .pkg_div
-    {
-        position: relative;
-        padding-top:50%;
-    }
-
-}
-
-
-@media only screen   
-and (min-device-width : 360px)   
-and (max-device-width : 640px)  
-{
-    .padding-top-60
-    {
-        padding-top: 40rem;
-    }
-
-    .card-box
-    {
-        margin-top: 30rem;
-    }
-
-    .margin-top-53
-    {
-        margin-top: -53rem;
-    }
-
-    .pkg-text
-    {
-        top: 640%;
-        writing-mode: none;
-        text-orientation: none;
-        transform: none;
-        writing-mode: lr-tb;
-    }
-
-   
-}
-
-@media only screen and (min-width: 1400px) {
-   
-    .pkg-text
-    {
-        margin-top: 15rem !important;
-    }
-
-}
-
-
-//css done ashique
-
 .main-pakages-div{
-    
-    background-image: url("../assets/images/anim.svg");
+    // background-image: url("/images/bg-light.svg");
     background-size: contain;
     background-position: center bottom;
     background-repeat: no-repeat;
-    padding-bottom: 5%;
     display: flex;
     justify-content: space-evenly;
-    filter: contrast(110%)
-    
+    filter: contrast(110%);
+    padding-top:70px;
+}
+
+@media(max-width:700px){
+    .main-pakages-div{
+        flex-direction: column;
+    }
+}
+
+.main-pakages-div h1{
+    position: absolute;
+    color: white;
+    transform: rotate(90deg);
+    transform-origin:top center;
+    font-size: 5vw;
+    padding: 0;
+    margin: 0;
+    top: 15vw;
 }
 
 .pakage-div-one{
-    width: 10%;
- 
+    flex:1 0 15%;
+    height: 80%;
     display: flex;
     align-items: flex-start;
     position: relative;
-    
+    background-color: aqua;
 }
 
 .pakage-div-one h1{
@@ -237,23 +54,27 @@ and (max-device-width : 640px)
 
 }
 
-// .pakage-div-three{
-//     width: 25%;
-//     margin-top: 10%;
-//     overflow: hidden;
-//     box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
-//     border-radius: 15px;
-//     background: rgba(255, 255, 225, 0.1);
-//     border-top: 1px solid rgba(255, 255, 255, 0.5);
-//     border-left: 1px solid rgba(255, 255, 255, 0.5);
-//     backdrop-filter: blur(5px);
-// }
+@media (max-width:700px){
+    .pakage-div-one h1{
+        width: 100%;
+        transform: rotate(0);
+        z-index: 1;
+        top: 0;
+        text-align: center;
+    }
+}
 
-.pakage-div-two{
-    width: 25%;
-    margin-bottom: 10%;
+.main-pakages-div .package-wrap{
+    flex:1 1 33%;
+    margin:0 20px;
+    border-radius: 15px;
     overflow: hidden;
-    /* padding: 2%; */
+}
+
+.main-pakages-div .package{
+    height: 70vw;
+    overflow: hidden;
+    margin: 0 0px;
     box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
     border-radius: 15px;
     background: rgba(255, 255, 225, 0.1);
@@ -262,7 +83,21 @@ and (max-device-width : 640px)
     backdrop-filter: blur(5px);
 }
 
-.pakage-div-two .img-div{
+@media (max-width:700px){
+    .main-pakages-div .package{
+        height: 700px;
+    }
+}
+
+@media (max-width:700px){
+    .main-pakages-div .package-wrap{
+        margin: 10vw;
+        padding-top: 5px;
+        padding-bottom: px;
+    }
+}
+
+.main-pakages-div .img-div{
     width: 100%;
     position: relative;
     display: flex;
@@ -270,39 +105,72 @@ and (max-device-width : 640px)
     margin-left: -1px;
 }
 
-.pakage-div-two .img-div h4{
-   position: absolute;
+.main-pakages-div .img-div h4{
+    position: absolute;
    color: white;
    font-size: 2vw;
-   margin-top: 10%;
+   margin: 10% 10%;
+   text-align: center;
 }
-.pakage-div-two img{
+
+@media (max-width:700px){
+    .main-pakages-div .img-div h4{
+        font-size: 16px;
+     }
+}
+
+.main-pakages-div img{
     width: 100%;
-    margin-top: -10%;
-    margin-left: -1px;
 }
-.pakage-div-two .content-div{
+
+.main-pakages-div .content-div{
     padding-left: 5%;
 }
 
-.pakage-div-two li{
-    padding-left: 2vw;
-    padding-right: 2vw;
+.main-pakages-div li{
+    padding: 0 2vw;
     color: white;
-    font-size: 1.2vw;
+    font-size: 120%;
     padding-top: 1.2vw;
     position: relative;
+    padding-left: 30px;
+    
 }
 
-.pakage-div-two li i{
+@media (max-width:700px){
+    .main-pakages-div li{
+        font-size: 12px;
+        margin: 20px;
+        margin-top: 0;
+        
+    }
+}
+
+.main-pakages-div li i{
     padding-top: 0vw;
     left: 0;
     position: absolute;
-    font-size: 1.5vw;
+    font-size: 20px;
     color:rgb(139, 139, 139);
 }
 
-.pakage-div-two button{
+// .btn{
+//     margin-top: 3vw;
+//     width: 70%;
+//     height: 8%;
+//     margin-left: 15%;
+//     background-color: transparent;
+//     border: solid;
+//     border-color: white;
+//     color: white;
+//     border-radius: 20px;
+//     border-width: 1px;
+//     font-size: 1.5vw;
+// }
+
+
+
+.main-pakages-div button{
     margin-top: 3vw;
     width: 70%;
     height: 8%;
@@ -314,89 +182,27 @@ and (max-device-width : 640px)
     border-radius: 20px;
     border-width: 1px;
     font-size: 1.5vw;
-    margin-bottom: 5vw;
+}
+
+@media (max-width:700px){
+    // .btn{
+    //     font-size: 3vw;
+    //     padding: 3vw;
+    //     margin-bottom: 5vw;
+    // }
+    .main-pakages-div button{
+        font-size: 3vw;
+        padding: 3vw;
+        margin-bottom: 5vw;
+    }
 }
 
 .pakage-div-three{
-    width: 25%;
-    margin-top: 10%;
-    overflow: hidden;
-    box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
-    border-radius: 15px;
-    background: rgba(255, 255, 225, 0.1);
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
+padding-top: 100px;
 }
-
-
-.pakage-div-three .img-div{
-    width: 100%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    margin-left: -1px;
+.pakage-div-four{
+    padding-top: 200px;
 }
-
-.pakage-div-three .img-div h4{
-   position: absolute;
-   color: white;
-   font-size: 2vw;
-   margin-top: 10%;
-}
-.pakage-div-three img{
-    width: 100%;
-    margin-top: -10%;
-    margin-left: -1px;
-}
-.pakage-div-three .content-div{
-    padding-left: 5%;
-}
-
-.main-pakages-div ul{
-    list-style: none;
-    padding:0;
-    margin:0;
-}
-
-.pakage-div-three li{
-    padding-left: 2vw;
-    padding-right: 2vw;
-    color: white;
-    font-size: 1.2vw;
-    padding-top: 1.2vw;
-    position: relative;
-}
-
-.pakage-div-three li i{
-    padding-top: 0vw;
-    left: 0;
-    position: absolute;
-    font-size: 1.5vw;
-    color:rgb(139, 139, 139);
-}
-
-.pakage-div-three button{
-    margin-top: 3vw;
-    width: 70%;
-    height: 8%;
-    margin-left: 15%;
-    background-color: transparent;
-    border: solid;
-    border-color: white;
-    color: white;
-    border-radius: 20px;
-    border-width: 1px;
-    font-size: 1.5vw;
-    margin-bottom: 5vw;
-}
-
-
 .pakage-div-for{
-    width: 10%;
+    margin: 10%;
 }
-// ol, ul {
-// 	list-style: none;
-//     padding:0;
-//     margin:0;
-// }
