--- a/src/style/service.scss
+++ b/src/style/service.scss
@@ -3,186 +3,28 @@
 /* service - start  */
 
 
-.service-main-div
-{
-  padding: 0;
-  margin: 0;
-}
-
-.service_list
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin-top: 10rem;
-    
-}
-
-.service_text
-{
-   
-    font-size: 3rem;
-    margin-left: 5rem;
-    margin-top: -30rem;
-}
-
-#vertical_line
-{
-    border-left: 3px solid $primary_color;
-    height: 550px;
-    position: relative;
-    margin-left: 5rem;
-    top: -1;
-}
-
-
-.serviceIcon
-{
-    color: $primary_color;
-    font-size: 3rem;
-    margin-left: 4rem;
-    margin-top:-1rem;
-}
-
-.service_1
-{
-    background-color: $ashcolor;
-    width: 300px;
-    height: 500px!important;
-    margin-left: 6rem;
-    border-radius: 10px;
-    margin-top: 10rem;
-}
-
-#youtube_icon
-{
-    position: absolute;
-    margin-top: -3rem;
-    margin-left: -3rem;
-}
-
-ul.dashed {
-    list-style-type: none;
-    line-height: 2;
-    
-    font-size: 20px;
-  }
-  ul.dashed > li {
-    text-indent: -5px;
-    color: $primary_color;
-   
-  }
-  ul.dashed > li:before {
-    content: "- ";
-    text-indent: -5px;
-    color: $primary_color;
-    
-  }
-
-
-  .items_list
-  {
-    display: flex;
-    /* justify-content: center; */
-    align-items: flex-start;
-    padding-top: 7rem;
-  }
-
-
-  #second_col
-  {
-    position: absolute;
-    margin-top: -58rem;
-    margin-left: 31rem;
-      
-  }
-
-  #vertical_text
-  {
-    color: #fff;
-    font-size: 2rem;
-    writing-mode: vertical-lr;
-    text-orientation: mixed;
-    transform: matrix(-1, 0, 0, -1, 0, 0);
-    margin-top: 0rem;
-    margin-left: 19rem;
-    text-align: center;
-    position: absolute;
-    height: 500px;
-  }
-
-/* service - end  */
-
-
-@media only screen and (min-width: 768px) {
-
-  // large screen 
-
-.text_service
-{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 52rem;
-}
-
-
-  .service_text
-{
-    writing-mode: vertical-lr;
-    text-orientation: mixed;
-    transform: matrix(-1, 0, 0, -1, 0, 0);
-    font-size: 3rem;
-    margin-top: 52rem;
-    margin-left: 2rem;
-   
-}
-
-.vertical_line
-{
-    border-left: 3px solid $primary_color;
-    height: 550px;
-    position: relative;
-    margin-left: 5rem;
-    top: -1;
-}
-
-
-.serviceIcon
-{
-    color: $primary_color;
-    font-size: 2rem;
-    margin-left: 4rem;
-    margin-top:-1rem;
-}
-
-
-.service_1
-{
-  margin-left: 0rem;
-}
-
-}
-
-
-
-//css done by ashique
-
 .service-main-div{
   width: 100%;
   display: flex;
   justify-content: space-evenly;
   padding: 5%;
+  // background-color: #000;
+}
+
+@media(max-width:700px){
+  .service-main-div{
+      flex-direction: column;
+  }
 }
 
 .sr-heading-div div{
-  margin-left: 25vw;
+  margin-left: 22vw;
   margin-top: -2.5vw;
   width: 40vw;
-  height: 20px;
+  height: 10px;
   background-color: white;
 }
+
 
 .sr-heading-div{
   padding-bottom: 6vw;
@@ -192,26 +34,45 @@ ul.dashed {
   height: 0;
 }
 
-.sr-heading-div h1{
-  color: white;
-  font-size: 2vw;
-  padding: 0;
-  margin: 0;
-}
+
 
 .sr-heading-div h1{
+  color: white;
+  font-weight: 100;
   margin: 0;
   padding: 0;
   font-size: 5vw;
-  color: white;
+}
+
+@media (max-width:700px){
+  .sr-heading-div{
+      transform: rotate(0);
+      width: 100%;
+      text-align: center;
+      font-weight: bold;
+  }
+  
+  .sr-heading-div div{
+      display: none;
+  }.sr-heading-div h1{
+      font-weight: bold;
+  }
 }
 
 .srv-row-div-one{
   position: relative;
-  margin-top: 5%;
-  width: 25%;
-  height: 90%;
+  margin-top: 2vw;
+  flex: 1;
+  margin: 6vw;
+  padding-bottom: 5vw;
   background: linear-gradient(0deg,#000,#000000e7);
+  margin-top: 0;
+}
+
+@media (max-width:700px){
+  .srv-row-div-one{
+      margin: 10vw;
+  }
 }
 
 .srv-row-div-one img{
@@ -219,18 +80,52 @@ ul.dashed {
   margin: -2vw;
 }
 
+@media(max-width:700px){
+  .srv-row-div-one img{
+      width: 30vw;
+      margin: -5vw;
+  }
+}
+
+@media (max-width:700px){
+  .label-div h1{
+      font-size: 5vw;
+      font-weight: 900;
+  }
+}
+
 .label-div{
   transform: rotate(90deg);
-  width: 0;
-  height: 0;
-  margin-top: 10%;
+  transform-origin: top left;
+  margin-left: -30px;
+  width: 50px;
 }
+
+@media (max-width:700px){
+  .label-div{
+  transform: none;
+  margin-left: 0px;
+  text-align: center;
+  width: auto;
+  }
+}
+
 .label-div h1{
   color: white;
   padding: 0;
   margin: 0;
-  font-size: 2.5vw;
+  font-size: 30px;
+  white-space: nowrap;
+}
 
+@media (max-width:700px){
+  .label-div h1{
+      font-size: 5vw;
+  }
+}
+
+.srv-row-div-one{
+  margin-top:80px;
 }
 
 .srv-row-div-one:before,.srv-row-div-one:after{
@@ -248,24 +143,54 @@ ul.dashed {
 
 
 .sr-content-div{
-  padding: 10%;
-  margin-top: 8vw;
+  padding-left: 5%;
+  margin-top: 5vw;
+}
+
+@media(min-width:700px){
+  .sr-content-div{
+      margin: 3vw;
+  }
+  
+}
+
+
+@media(max-width:700px){
+  .sr-content-div{
+      margin: 5vw;
+  }
+  
 }
 
 .sr-content-div li{
-  padding-left: 0;
+  padding-left: 2vw;
   color: white;
-  font-size: 1.2vw;
-  padding-top: 10px;
+  font-size: 1.5vw;
+  padding-top: 15px;
+  padding-left: 50px;
+  padding-bottom: 10px;
   position: relative;
+  text-align: start;
+}
+
+@media (max-width:700px){
+  .sr-content-div li{
+      font-size: 15px;
+  }
 }
 
 .sr-content-div li i{
   top: 10px;
   left: 0;
   position: absolute;
-  font-size: 1.5vw;
+  font-size: 2vw;
   color:rgb(139, 139, 139);
+}
+
+@media (max-width:700px){
+  .sr-content-div li i{
+      font-size: 20px;
+  }
 }
 
 .srv-row-div-one:after{
@@ -284,8 +209,3 @@ ul.dashed {
       background-position: 0 0;
   }
 }
-
-.space-div{
-  height: 25vh;
-}
-
