--- a/src/style/package.scss
+++ b/src/style/package.scss
@@ -17,6 +17,34 @@
     padding-top:70px;
 }
 
+.card-list
+{
+    border: 2px solid white;
+}
+
+.select-months
+{
+    min-width: 15%;
+    height: 40px;
+    border: 2px solid $ashcolor;
+}
+
+.checkbox
+{
+    height: 25px;
+    width: 25px;
+    
+}
+
+.checkbox-label
+{
+   display: flex;
+   align-items: flex-start;
+   justify-content: flex-start;
+   
+}
+
+
 @media(max-width:700px){
     .main-pakages-div{
         flex-direction: column;
@@ -66,7 +94,7 @@
 
 .main-pakages-div .package-wrap{
     flex:1 1 33%;
-    margin:0 20px;
+    margin:0 40px;
     border-radius: 15px;
     overflow: hidden;
 }
@@ -74,7 +102,7 @@
 .main-pakages-div .package{
     height: 70vw;
     overflow: hidden;
-    margin: 0 0px;
+    margin: 20 0px;
     box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
     border-radius: 15px;
     background: rgba(255, 255, 225, 0.1);
