--- a/src/style/order.scss
+++ b/src/style/order.scss
@@ -4,6 +4,12 @@
 {
     background-color: $bgPrimary;
 }
+
+.card
+{
+    width:100%;
+    // margin:0 20% 0 20%;
+}
 .text
 {
     color: $bgPrimary;
